--- a/plugin.xml
+++ b/plugin.xml
@@ -198,57 +198,113 @@
 
 	</platform>
 
-	<!-- android -->
-	<platform name="android">
-		<config-file target="res/xml/config.xml" parent="/*">
-			<feature name="ImagePicker">
-				<param name="android-package" value="com.synconset.ImagePicker"/>
-			</feature>
-		</config-file>
-		
-		<config-file target="AndroidManifest.xml" parent="/manifest/application">
-		    <activity android:label="@string/multi_app_name" android:name="com.synconset.MultiImageChooserActivity" android:theme="@android:style/Theme.Holo.Light">
-            </activity>
-		</config-file>
-		
-		<config-file target="AndroidManifest.xml" parent="/manifest">
-		    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-		</config-file>
+  <platform name="android">
+    <config-file target="res/xml/config.xml" parent="/*">
+      <feature name="ImagePicker">
+        <param name="android-package" value="com.synconset.ImagePicker"/>
+      </feature>
+    </config-file>
 
-		<source-file src="src/android/com/synconset/ImagePicker/ImagePicker.java" target-dir="src/com/synconset" />
-		<source-file src="src/android/com/synconset/ImagePicker/FakeR.java" target-dir="src/com/synconset" />
-		
-		<source-file src="src/android/Library/src/ImageFetcher.java" target-dir="src/com/synconset"/>
-		<source-file src="src/android/Library/src/MultiImageChooserActivity.java" target-dir="src/com/synconset"/>
+    <config-file target="AndroidManifest.xml" parent="/manifest/application">
+      <activity android:label="@string/multi_app_name" android:name="mediachooser.activity.BucketHomeFragmentActivity" android:theme="@android:style/Theme.Holo.Light">
+      </activity>
+	   <activity android:name="mediachooser.activity.HomeFragmentActivity" android:theme="@android:style/Theme.Holo.Light">
+      </activity>
+    </config-file>
 
-		<source-file src="src/android/Library/res/anim/image_pop_in.xml" target-dir="res/anim"/>
-		<source-file src="src/android/Library/res/drawable/grid_background.xml" target-dir="res/drawable"/>
-		<source-file src="src/android/Library/res/drawable-hdpi/image_bg.9.png" target-dir="res/drawable-hdpi"/>
-		<source-file src="src/android/Library/res/drawable-hdpi/loading_icon.png" target-dir="res/drawable-hdpi"/>
-		<source-file src="src/android/Library/res/drawable-mdpi/ic_action_discard_dark.png" target-dir="res/drawable-mdpi"/>
-		<source-file src="src/android/Library/res/drawable-mdpi/ic_action_discard_light.png" target-dir="res/drawable-mdpi"/>
-		<source-file src="src/android/Library/res/drawable-mdpi/ic_action_done_dark.png" target-dir="res/drawable-mdpi"/>
-		<source-file src="src/android/Library/res/drawable-mdpi/ic_action_done_light.png" target-dir="res/drawable-mdpi"/>
-		<source-file src="src/android/Library/res/drawable-mdpi/ic_launcher.png" target-dir="res/drawable-mdpi"/>
-		<source-file src="src/android/Library/res/drawable-xhdpi/ic_action_discard_dark.png" target-dir="res/drawable-xhdpi"/>
-		<source-file src="src/android/Library/res/drawable-xhdpi/ic_action_discard_light.png" target-dir="res/drawable-xhdpi"/>
-		<source-file src="src/android/Library/res/drawable-xhdpi/ic_action_done_dark.png" target-dir="res/drawable-xhdpi"/>
-		<source-file src="src/android/Library/res/drawable-xhdpi/ic_action_done_light.png" target-dir="res/drawable-xhdpi"/>
-		<source-file src="src/android/Library/res/drawable-xhdpi/ic_launcher.png" target-dir="res/drawable-xhdpi"/>
-		<source-file src="src/android/Library/res/layout/actionbar_custom_view_done_discard.xml" target-dir="res/layout"/>
-		<source-file src="src/android/Library/res/layout/actionbar_discard_button.xml" target-dir="res/layout"/>
-		<source-file src="src/android/Library/res/layout/actionbar_done_button.xml" target-dir="res/layout"/>
-		<source-file src="src/android/Library/res/layout/multiselectorgrid.xml" target-dir="res/layout"/>
-		<source-file src="src/android/Library/res/values/multiimagechooser_strings_en.xml" target-dir="res/values"/>
-		<source-file src="src/android/Library/res/values/themes.xml" target-dir="res/values"/>
-		
-		<source-file src="src/android/Library/res/values-de/multiimagechooser_strings_de.xml" target-dir="res/values-de"/>
-		<source-file src="src/android/Library/res/values-es/multiimagechooser_strings_es.xml" target-dir="res/values-es"/>
-		<source-file src="src/android/Library/res/values-fr/multiimagechooser_strings_fr.xml" target-dir="res/values-fr"/>
-		<source-file src="src/android/Library/res/values-hu/multiimagechooser_strings_hu.xml" target-dir="res/values-hu"/>
-		<source-file src="src/android/Library/res/values-ja/multiimagechooser_strings_ja.xml" target-dir="res/values-ja"/>
-		<source-file src="src/android/Library/res/values-ko/multiimagechooser_strings_ko.xml" target-dir="res/values-ko"/>
+    <config-file target="AndroidManifest.xml" parent="/manifest">
+      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    </config-file>
 
-		<framework src="src/android/ignorelinterrors.gradle" custom="true" type="gradleReference"/>
-	</platform>
+    <source-file src="src/android/com/synconset/ImagePicker/ImagePicker.java" target-dir="src/com/synconset" />
+    <source-file src="src/android/com/synconset/ImagePicker/FakeR.java" target-dir="src/com/synconset" />
+
+    <source-file src="src/android/Library/src/ImageFetcher.java" target-dir="src/com/synconset"/>
+    <source-file src="src/android/Library/src/MultiImageChooserActivity.java" target-dir="src/com/synconset"/>
+
+    <source-file src="src/android/mediachooser/activity/BucketHomeFragmentActivity.java" target-dir="src/mediachooser/activity"/>
+    <source-file src="src/android/mediachooser/activity/HomeFragmentActivity.java" target-dir="src/mediachooser/activity"/>
+
+    <source-file src="src/android/mediachooser/adapter/BucketGridAdapter.java" target-dir="src/mediachooser/adapter"/>
+    <source-file src="src/android/mediachooser/adapter/GridViewAdapter.java" target-dir="src/mediachooser/adapter"/>
+
+    <source-file src="src/android/mediachooser/async/ImageLoadAsync.java" target-dir="src/mediachooser/async"/>
+    <source-file src="src/android/mediachooser/async/MediaAsync.java" target-dir="src/mediachooser/async"/>
+
+    <source-file src="src/android/mediachooser/fragment/BucketImageFragment.java" target-dir="src/mediachooser/fragment"/>
+    <source-file src="src/android/mediachooser/fragment/ImageFragment.java" target-dir="src/mediachooser/fragment"/>
+    
+    <source-file src="src/android/mediachooser/BucketEntry.java" target-dir="src/mediachooser"/>
+    <source-file src="src/android/mediachooser/GalleryCache.java" target-dir="src/mediachooser"/>
+    <source-file src="src/android/mediachooser/GalleryRetainCache.java" target-dir="src/mediachooser"/>
+    <source-file src="src/android/mediachooser/MediaChooser.java" target-dir="src/mediachooser"/>
+    <source-file src="src/android/mediachooser/MediaChooserConstants.java" target-dir="src/mediachooser"/>
+    <source-file src="src/android/mediachooser/MediaModel.java" target-dir="src/mediachooser"/>
+    <source-file src="src/android/mediachooser/SquareImageView.java" target-dir="src/mediachooser"/>
+
+	
+    
+    <source-file src="src/android/Library/libs/picasso-2.4.0.jar" target-dir="libs"/>
+
+    <source-file src="src/android/Library/res/anim/image_pop_in.xml" target-dir="res/anim"/>
+    <source-file src="src/android/Library/res/drawable/grid_background.xml" target-dir="res/drawable"/>
+
+    <source-file src="src/android/Library/res/drawable/selector_camera_button.xml" target-dir="res/drawable"/>
+    <source-file src="src/android/Library/res/drawable/selector_check.xml" target-dir="res/drawable"/>
+    <source-file src="src/android/Library/res/drawable/selector_video_button.xml" target-dir="res/drawable"/>
+    <source-file src="src/android/Library/res/drawable/tab_selected.xml" target-dir="res/drawable"/>
+    <source-file src="src/android/Library/res/drawable/tab_selector.xml" target-dir="res/drawable"/>
+    <source-file src="src/android/Library/res/drawable/tab_unselected.xml" target-dir="res/drawable"/>
+    <source-file src="src/android/Library/res/drawable/ic_keyboard_arrow_left_black_36dp.png" target-dir="res/drawable"/>
+
+    <source-file src="src/android/Library/res/drawable-hdpi/ic_camera_selected_from_media_chooser_header_bar.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-hdpi/ic_camera_unselect_from_media_chooser_header_bar.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-hdpi/ic_cancel.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-hdpi/ic_loading.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-hdpi/ic_navigation_left_from_media_chooser_header_bar.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-hdpi/ic_selected_check_box_from_media_chooser_header_bar.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-hdpi/ic_unselected_check_box_from_media_chooser_header_bar.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-hdpi/ic_video.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-hdpi/ic_video_selected_from_media_chooser_header_bar.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-hdpi/ic_video_unselect_from_media_chooser_header_bar.png" target-dir="res/drawable-hdpi"/>
+    <!--<source-file src="src/android/Library/res/drawable-hdpi/ic_video.png" target-dir="res/drawable-hdpi"/>-->
+  <!--  <source-file src="src/android/Library/res/drawable-hdpi/icon.png" target-dir="res/drawable-hdpi"/>-->
+
+    <source-file src="src/android/Library/res/drawable-hdpi/image_bg.9.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-hdpi/loading_icon.png" target-dir="res/drawable-hdpi"/>
+    <source-file src="src/android/Library/res/drawable-mdpi/ic_action_discard_dark.png" target-dir="res/drawable-mdpi"/>
+    <source-file src="src/android/Library/res/drawable-mdpi/ic_action_discard_light.png" target-dir="res/drawable-mdpi"/>
+    <source-file src="src/android/Library/res/drawable-mdpi/ic_action_done_dark.png" target-dir="res/drawable-mdpi"/>
+    <source-file src="src/android/Library/res/drawable-mdpi/ic_action_done_light.png" target-dir="res/drawable-mdpi"/>
+    <source-file src="src/android/Library/res/drawable-mdpi/ic_launcher.png" target-dir="res/drawable-mdpi"/>
+    <source-file src="src/android/Library/res/drawable-xhdpi/ic_action_discard_dark.png" target-dir="res/drawable-xhdpi"/>
+    <source-file src="src/android/Library/res/drawable-xhdpi/ic_action_discard_light.png" target-dir="res/drawable-xhdpi"/>
+    <source-file src="src/android/Library/res/drawable-xhdpi/ic_action_done_dark.png" target-dir="res/drawable-xhdpi"/>
+    <source-file src="src/android/Library/res/drawable-xhdpi/ic_action_done_light.png" target-dir="res/drawable-xhdpi"/>
+    <source-file src="src/android/Library/res/drawable-xhdpi/ic_launcher.png" target-dir="res/drawable-xhdpi"/>
+    <source-file src="src/android/Library/res/layout/actionbar_custom_view_done_discard.xml" target-dir="res/layout"/>
+    <source-file src="src/android/Library/res/layout/actionbar_discard_button.xml" target-dir="res/layout"/>
+    <source-file src="src/android/Library/res/layout/actionbar_done_button.xml" target-dir="res/layout"/>
+    <source-file src="src/android/Library/res/layout/multiselectorgrid.xml" target-dir="res/layout"/>
+    <source-file src="src/android/Library/res/values/multiimagechooser_strings_en.xml" target-dir="res/values"/>
+    <source-file src="src/android/Library/res/values/themes.xml" target-dir="res/values"/>
+    <source-file src="src/android/Library/res/values/colors.xml" target-dir="res/values"/>
+	  <source-file src="src/android/Library/res/values/styles.xml" target-dir="res/values"/>
+
+    <source-file src="src/android/Library/res/layout/activity_home_media_chooser.xml" target-dir="res/layout"/>
+    <source-file src="src/android/Library/res/layout/view_grid_bucket_item_media_chooser.xml" target-dir="res/layout"/>
+    <source-file src="src/android/Library/res/layout/view_grid_item_media_chooser.xml" target-dir="res/layout"/>
+    <source-file src="src/android/Library/res/layout/view_grid_layout_media_chooser.xml" target-dir="res/layout"/>
+    <source-file src="src/android/Library/res/layout/view_header_bar_media_chooser.xml" target-dir="res/layout"/>
+    <source-file src="src/android/Library/res/layout/view_loading_media_chooser.xml" target-dir="res/layout"/>
+
+    <source-file src="src/android/Library/res/values-de/multiimagechooser_strings_de.xml" target-dir="res/values-de"/>
+    <source-file src="src/android/Library/res/values-es/multiimagechooser_strings_es.xml" target-dir="res/values-es"/>
+    <source-file src="src/android/Library/res/values-fr/multiimagechooser_strings_fr.xml" target-dir="res/values-fr"/>
+    <source-file src="src/android/Library/res/values-hu/multiimagechooser_strings_hu.xml" target-dir="res/values-hu"/>
+    <source-file src="src/android/Library/res/values-ja/multiimagechooser_strings_ja.xml" target-dir="res/values-ja"/>
+    <source-file src="src/android/Library/res/values-ko/multiimagechooser_strings_ko.xml" target-dir="res/values-ko"/>
+    
+    <framework src="com.android.support:support-v4:+" />
+  </platform>
 </plugin>
